unpackaged/main/default/objects/sfsp__ListViewColumn__c/sfsp__ListViewColumn__c.object-meta.xml
<CustomObject>
    <label>List View Column</label>
    <nameField>
        <displayFormat>Column-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>