unpackaged/main/default/objects/sfsp__ListViewColumn__c/fields/sfsp__Column__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Column__c</fullName>
    <label>Column</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>