unpackaged/main/default/objects/sfsp__ListViewColumn__c/fields/sfsp__ListView__c.field-meta.xml
<CustomField>
    <fullName>sfsp__ListView__c</fullName>
    <label>List View</label>
    <referenceTo>sfsp__ListView__c</referenceTo>
    <relationshipLabel>List View Columns</relationshipLabel>
    <relationshipName>ListViewColumns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>