unpackaged/main/default/objects/sfsp__ListViewColumn__c/fields/sfsp__Order__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>