unpackaged/main/default/objects/sfsp__ListViewColumn__c/fields/sfsp__SalesNodeBoundary__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesNodeBoundary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Node Boundary Object</label>
    <referenceTo>sfsp__SalesNodeBoundary__c</referenceTo>
    <relationshipLabel>Sales Node Boundary Objects</relationshipLabel>
    <relationshipName>SalesNodeBoundaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>