unpackaged/main/default/objects/sfsp__ListViewColumn__c/fields/sfsp__SummaryFormat__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SummaryFormat__c</fullName>
    <label>Summary Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
                <default>true</default>
                <label>Sum</label>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Median</fullName>
            </value>
            <value>
                <fullName>PercentOfFocus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>