unpackaged/main/default/objects/sfsp__ListViewColumn__c/fields/sfsp__Type__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Object</fullName>
            </value>
            <value>
                <fullName>Allocation Metric</fullName>
            </value>
            <value>
                <fullName>Reference Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>